# cli_tool

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: arguments.rs  link.rs  main.rs
