[package]
name = "cli_tool"
version = "0.1.0"
edition = "2021"
authors = ["hackingpractise"]
description = "cli tools to create symbolic links from one directory to another"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
# clap_complete = "4.5.38"
# clio = "0.3.5"
# comfy-table = "7.1.3"
# crossterm = "0.28.1"
# inquire = "0.7.5"
# thiserror = "2.0.3"
